-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
There are several issues with LCTL to fix:
- llog_print params shows all parameters without filtering deleted (i.e having SKIP flag), so its output is confusing and that could be problematic to parse its output correctly due to that
- it looks like there is parsing bug, so command like that lctl set_param -P -d mdt.lustre-MDT0000.dom_read_open=1 cause setting parameter in form 'mdt.lustre-MDT0000.dom_read_open=111=' instead of deleting dom_read_open fg
- lctl llog_print cause segfault, so it has issue with correct parameters parsing